--- a/TESI/WhoPlays/app/src/main/res/layout/floating_action_button.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/floating_action_button.xml
@@ -3,12 +3,14 @@
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".WhoPlaysActivity">
 
     <include layout="@layout/content_main" />
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -26,7 +28,5 @@
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
-
-
 
 </android.support.design.widget.CoordinatorLayout>
