--- a/TESI/WhoPlays/app/src/main/res/values/styles.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/styles.xml
@@ -7,5 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="DialogTheme" parent="android:Theme.Holo.Light.Dialog" />
+    <style name="NoActionBarTheme" parent="android:Theme.NoTitleBar.OverlayActionModes" />
+    <style name="popup" parent="android:Theme.NoTitleBar.OverlayActionModes" />
+
+
+
 
 </resources>
