--- a/TESI/WhoPlays/app/src/main/res/layout/activity_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_who_plays.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent"
         app:menu="@menu/nav_drawer_menu"
         android:layout_gravity="start"
+        android:id="@+id/nav_view"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/header_nav_drawer"
 
