--- a/TESI/WhoPlays/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/TESI/WhoPlays/app/src/main/res/menu/nav_drawer_menu.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/home"
-        android:title="home">
+
+    <item android:id="@+id/myTeam"
+        android:title="@string/myTeam"
+        android:checkable="true">
     </item>
+
+    <item android:id="@+id/messages"
+        android:title="@string/messages"
+        android:checkable="true">
+    </item>
+
+    <item android:id="@+id/calendar"
+        android:title="@string/calendar"
+        android:checkable="true">
+    </item>
+
+    <item android:id="@+id/guide"
+        android:title="@string/guide"
+        android:checkable="true">
+    </item>
+
     <item android:id="@+id/setting"
-        android:title="Sett">
+        android:title="@string/setting"
+        android:checkable="true">
     </item>
+
+    <item android:id="@+id/logOut"
+        android:title="@string/logOut"
+        android:checkable="true">
+    </item>
+
+
 </menu>
