--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_calendar.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_calendar.xml
@@ -3,13 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <Button
-        android:id="@+id/buttonMyTeam"
+        android:id="@+id/button"
         android:text="Click Me"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-
 
 </LinearLayout>
