--- a/TESI/WhoPlays/app/src/main/res/layout/activity_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_who_plays.xml
@@ -1,28 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:openDrawer="start"
-    tools:context=".WhoPlaysActivity"
-    android:id="@+id/drawer">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-
-    <include layout="@layout/floating_action_button" />
-
+    <include
+        layout="@layout/app_bar_who_plays"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:menu="@menu/nav_drawer_menu"
         android:layout_gravity="start"
-        android:id="@+id/nav_view"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/header_nav_drawer"
-
-        >
-    </android.support.design.widget.NavigationView>
+        app:headerLayout="@layout/nav_header_who_plays"
+        app:menu="@menu/activity_who_plays_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
