--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
@@ -3,14 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <Button
-        android:id="@+id/buttonMyTeam"
-        android:text="Click Me"
+    <TextView
+        android:id="@+id/provaText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-
-
+        android:layout_height="match_parent"
+        android:text="ciaoSbarra"/>
 
 </LinearLayout>
