--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
@@ -3,10 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/provaText"
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="ciaoSbarra"/>
-
+        android:layout_height="wrap_content"
+        android:id="@+id/listViewWhoPlays"
+        />
 </LinearLayout>
