--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10sp"
-    android:orientation="vertical"
-    tools:context=".FilterFragment">
+    android:orientation="vertical">
 
     <TableRow>
 
