--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
@@ -31,7 +31,8 @@
             android:id="@+id/spinnerOrder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            />
 
     </TableRow>
 
