--- a/TESI/WhoPlays/app/src/main/res/layout/activity_sign_up.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_sign_up.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@drawable/login_background"
     android:layout_height="match_parent">
 
     <EditText
@@ -33,6 +34,7 @@
     <Button
         android:id="@+id/button_create_account"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Create account!"/>
 
 </LinearLayout>
