--- a/TESI/WhoPlays/app/src/main/res/layout/activity_login.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
 
       />
 
-   <Button
+   <Button style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/button_login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
        android:layout_marginTop="60dp"
        android:text="Login" />
 
-   <Button
+   <Button style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/button_sign_up"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
