--- a/TESI/WhoPlays/app/src/main/res/layout/activity_login.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_login.xml
@@ -46,8 +46,9 @@
        android:layout_marginTop="60dp"
        android:text="Login" />
 
-   <Button style="@style/Base.Widget.AppCompat.Button.Colored"
+   <Button
        android:id="@+id/button_sign_up"
+       style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_login"
