--- a/TESI/WhoPlays/app/src/main/res/layout/activity_sign_up.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_sign_up.xml
@@ -2,39 +2,55 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background">
+    android:background="@drawable/login_background"
+    android:layout_gravity="center">
 
 
     <EditText
         android:id="@+id/sign_up_name"
-        android:layout_width="match_parent"
+        android:layout_width="400px"
         android:layout_height="wrap_content"
-        android:hint="Name"/>
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="200px"
+        android:hint="Name"
+        android:inputType="text"/>
 
     <EditText
         android:id="@+id/sign_up_surname"
-        android:layout_width="match_parent"
+        android:layout_width="400px"
         android:layout_height="wrap_content"
-        android:hint="Surname"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="40px"
+        android:hint="Surname"
+        android:inputType="text"/>
 
     <EditText
         android:id="@+id/sign_up_email"
-        android:layout_width="match_parent"
+        android:layout_width="400px"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="Email"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="40px"
+        android:hint="Email"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/sign_up_password"
-        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_width="400px"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Password"/>
+        android:layout_marginTop="40px"
+        android:hint="Password"
+        android:inputType="textPassword" />
 
 
     <Button
         android:id="@+id/button_create_account"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_gravity="center"
+        android:layout_width="400px"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60px"
+        />
 
 </LinearLayout>
