--- a/TESI/WhoPlays/app/src/main/res/layout/activity_sign_up.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_sign_up.xml
@@ -51,6 +51,6 @@
         android:layout_width="400px"
         android:layout_height="wrap_content"
         android:layout_marginTop="60px"
-        />
+        android:text="Create Account"/>
 
 </LinearLayout>
