--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_create_team_ads.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_create_team_ads.xml
@@ -1,11 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<TableRow>
     <TextView
+        android:id="@+id/team_selection_textView"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Coglione"/>
+        android:text="Squadra"/>
 
-</LinearLayout>
+    <Spinner
+        android:id="@+id/team_selection_spinner"
+        android:layout_weight="1"
+
+        />
+
+</TableRow>
+<TableRow>
+    <TextView
+        android:id="@+id/match_type_textView"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/match_type"/>
+
+    <Spinner
+        android:id="@+id/numero_giocatori_spinner"
+        android:layout_weight="1"
+        />
+</TableRow>
+<TableRow>
+    <TextView
+        android:id="@+id/soccer_field_textView"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:text="@string/soccer_field"/>
+
+    <EditText
+        android:id="@+id/soccer_field_editText"
+        android:layout_weight="1"
+        />
+
+</TableRow>
+
+
+
+</TableLayout>
