--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_map.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_map.xml
@@ -1,15 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WhoPlaysActivity">
+    >
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView2"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp" />
-
+        tools:context="com.example.user.whoplays.MapActivity" />
 </RelativeLayout>
