--- a/TESI/WhoPlays/app/src/main/res/layout/activity_maps.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_maps.xml
@@ -1,8 +1,24 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".MapsActivity"
+android:orientation="vertical"
+android:weightSum="1">
+
+<fragment
+    android:id="@+id/place_autocomplete"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+    />
+
+<fragment
     android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+    class="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.whoplays.MapsActivity" />
+    tools:context="com.example.user.whoplays.MapsActivity"/>
+
+
+</LinearLayout>
