--- a/TESI/WhoPlays/app/src/main/res/layout/activity_maps.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_maps.xml
@@ -18,7 +18,19 @@ android:weightSum="1">
     class="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.whoplays.MapsActivity"/>
+    tools:context="com.example.user.whoplays.MapsActivity">
+
+    <Button
+        android:id="@+id/confirm_place_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/confirm_place_button"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_gravity="right|bottom"
+        />
+
+</fragment>
 
 
 </LinearLayout>
