--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
-    tools:context=".CreateAdsActivity">
+    tools:context=".CreateAdsActivity"
+    android:background="@drawable/field">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -20,8 +21,11 @@
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
         </android.support.design.widget.AppBarLayout>
 
+
         <TableRow
-            android:layout_marginTop="5sp">
+            android:layout_marginTop="80sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
                 <TextView
                     android:id="@+id/type_of_match_textView"
                     android:layout_weight="1"
@@ -30,6 +34,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="@string/match_type"
+                    android:textColor="#FFF"
                     />
 
                 <Spinner
@@ -37,11 +42,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:autofillHints="Set number"
+
                     />
         </TableRow>
 
         <TableRow
-           android:layout_marginTop="5sp">
+           android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
 
         <TextView
             android:id="@+id/set_date_textView"
@@ -51,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="@string/set_date"
+            android:textColor="#FFF"
             />
 
         <TextView
@@ -60,10 +70,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="setDate"
-            android:hint="@string/set_date_button" />
+            android:hint="@string/set_date_button"
+            android:textColorHint="#FFF"/>
 </TableRow>
         <TableRow
-            android:layout_marginTop="5sp">
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
 
                 <TextView
                     android:id="@+id/set_time_textView"
@@ -73,6 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="@string/set_time"
+                    android:textColor="#FFF"
                     />
 
                 <TextView
@@ -82,20 +96,24 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:onClick="setTime"
-                    android:hint="@string/set_time_button" />
+                    android:hint="@string/set_time_button"
+                    android:textColorHint="#FFF"/>
 
 
         </TableRow>
         <TableRow
-            android:layout_marginTop="5sp">
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
                 <TextView
                     android:id="@+id/set_place_textView"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textStyle="italic"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:text="@string/set_place"
+                    android:textColor="#FFF"
                     />
                 <TextView
                     android:id="@+id/set_place_button"
@@ -104,9 +122,13 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:onClick="setTime"
-                    android:hint="@string/set_place_button" />
+                    android:hint="@string/set_place_button"
+                    android:textColorHint="#FFF"/>
         </TableRow>
-        <TableRow>
+        <TableRow
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
                 <TextView
                     android:layout_marginTop="5sp"
                     android:id="@+id/number_of_player_textView"
@@ -115,6 +137,7 @@
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:text="@string/number_of_player"
+                    android:textColor="#FFF"
                     />
 
                 <EditText
@@ -123,14 +146,20 @@
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:inputType="number"
+                    android:textColorHint="#FFF"
                     />
         </TableRow>
-        <TableRow>
+        <TableRow
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
+
                 <Button
                     android:id="@+id/confirm_ads_creation_button"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
-                    android:text="@string/confirm_ads_creation_button"/>
+                    android:text="@string/confirm_ads_creation_button"
+                    android:textColor="#007F00"/>
         </TableRow>
 </TableLayout>
