--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
-    tools:context=".CreateAdsActivity"
-    android:background="@drawable/field">
+    tools:context=".CreateAdsActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -21,11 +20,8 @@
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
         </android.support.design.widget.AppBarLayout>
 
-
         <TableRow
-            android:layout_marginTop="80sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
+            android:layout_marginTop="5sp">
                 <TextView
                     android:id="@+id/type_of_match_textView"
                     android:layout_weight="1"
@@ -34,7 +30,6 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="@string/match_type"
-                    android:textColor="#FFF"
                     />
 
                 <Spinner
@@ -42,15 +37,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:autofillHints="Set number"
-
                     />
         </TableRow>
 
         <TableRow
-           android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
+           android:layout_marginTop="5sp">
 
         <TextView
             android:id="@+id/set_date_textView"
@@ -60,7 +51,6 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="@string/set_date"
-            android:textColor="#FFF"
             />
 
         <TextView
@@ -70,13 +60,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="setDate"
-            android:hint="@string/set_date_button"
-            android:textColorHint="#FFF"/>
+            android:hint="@string/set_date_button" />
 </TableRow>
         <TableRow
-            android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
+            android:layout_marginTop="5sp">
 
                 <TextView
                     android:id="@+id/set_time_textView"
@@ -86,7 +73,6 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="@string/set_time"
-                    android:textColor="#FFF"
                     />
 
                 <TextView
@@ -96,24 +82,20 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:onClick="setTime"
-                    android:hint="@string/set_time_button"
-                    android:textColorHint="#FFF"/>
+                    android:hint="@string/set_time_button" />
 
 
         </TableRow>
         <TableRow
-            android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
+            android:layout_marginTop="5sp">
                 <TextView
                     android:id="@+id/set_place_textView"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textStyle="italic"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:text="@string/set_place"
-                    android:textColor="#FFF"
                     />
                 <TextView
                     android:id="@+id/set_place_button"
@@ -122,13 +104,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:onClick="setTime"
-                    android:hint="@string/set_place_button"
-                    android:textColorHint="#FFF"/>
+                    android:hint="@string/set_place_button" />
         </TableRow>
-        <TableRow
-            android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
+        <TableRow>
                 <TextView
                     android:layout_marginTop="5sp"
                     android:id="@+id/number_of_player_textView"
@@ -137,7 +115,6 @@
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:text="@string/number_of_player"
-                    android:textColor="#FFF"
                     />
 
                 <EditText
@@ -146,20 +123,14 @@
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:inputType="number"
-                    android:textColorHint="#FFF"
                     />
         </TableRow>
-        <TableRow
-            android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
-
+        <TableRow>
                 <Button
                     android:id="@+id/confirm_ads_creation_button"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
-                    android:text="@string/confirm_ads_creation_button"
-                    android:textColor="#007F00"/>
+                    android:text="@string/confirm_ads_creation_button"/>
         </TableRow>
 </TableLayout>
