listView, roba di andre e non ricordo cos'altro
messo bene la list view

--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
@@ -3,10 +3,20 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+
+    <TextView
+        android:id="@+id/title_list_ads"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listViewWhoPlays"></ListView>
+        android:textSize="20sp"
+        android:layout_marginBottom="2sp"
+        android:text="@string/title_list_ads"/>
+
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listViewWhoPlays"/>
 
 
 </LinearLayout>
