--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
+    android:background="@drawable/field"
     tools:context=".CreateAdsActivity">
 
         <android.support.design.widget.AppBarLayout
@@ -21,12 +22,15 @@
         </android.support.design.widget.AppBarLayout>
 
         <TableRow
-            android:layout_marginTop="5sp">
+            android:layout_marginTop="80sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
                 <TextView
                     android:id="@+id/type_of_match_textView"
                     android:layout_weight="1"
                     android:textStyle="italic"
                     android:textSize="20sp"
+                    android:textColor="#FFF"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="@string/match_type"
@@ -35,19 +39,23 @@
                 <Spinner
                     android:id="@+id/type_of_match_spinner"
                     android:layout_width="match_parent"
+                    android:textColor="#FFF"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     />
         </TableRow>
 
         <TableRow
-           android:layout_marginTop="5sp">
+           android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
 
         <TextView
             android:id="@+id/set_date_textView"
             android:layout_weight="1"
             android:textSize="20sp"
             android:textStyle="italic"
+            android:textColor="#FFF"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="@string/set_date"
@@ -56,6 +64,7 @@
         <TextView
             android:id="@+id/button1"
             android:textSize="20sp"
+            android:textColor="#FFF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -63,11 +72,14 @@
             android:hint="@string/set_date_button" />
 </TableRow>
         <TableRow
-            android:layout_marginTop="5sp">
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
 
                 <TextView
                     android:id="@+id/set_time_textView"
                     android:textSize="20sp"
+                    android:textColor="#FFF"
                     android:layout_weight="1"
                     android:textStyle="italic"
                     android:layout_height="wrap_content"
@@ -78,6 +90,7 @@
                 <TextView
                     android:id="@+id/button"
                     android:textSize="20sp"
+                    android:textColor="#FFF"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -87,10 +100,13 @@
 
         </TableRow>
         <TableRow
-            android:layout_marginTop="5sp">
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">
                 <TextView
                     android:id="@+id/set_place_textView"
                     android:layout_weight="1"
+                    android:textColor="#FFF"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textStyle="italic"
@@ -99,6 +115,7 @@
                     />
                 <TextView
                     android:id="@+id/set_place_button"
+                    android:textColor="#FFF"
                     android:layout_width="match_parent"
                     android:textSize="20sp"
                     android:layout_height="wrap_content"
@@ -106,11 +123,14 @@
                     android:onClick="setTime"
                     android:hint="@string/set_place_button" />
         </TableRow>
-        <TableRow>
+        <TableRow
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">>
                 <TextView
-                    android:layout_marginTop="5sp"
                     android:id="@+id/number_of_player_textView"
                     android:layout_weight="1"
+                    android:textColor="#FFF"
                     android:textSize="20sp"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
@@ -120,12 +140,16 @@
                 <EditText
                     android:id="@+id/number_of_player_editText"
                     android:layout_weight="1"
+                    android:textColor="#FFF"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:inputType="number"
                     />
         </TableRow>
-        <TableRow>
+        <TableRow
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp">>
                 <Button
                     android:id="@+id/confirm_ads_creation_button"
                     android:layout_weight="1"
