--- a/TESI/WhoPlays/app/src/main/res/menu/link_to_home.xml
+++ b/TESI/WhoPlays/app/src/main/res/menu/link_to_home.xml
@@ -5,6 +5,6 @@
         android:id="@+id/home_button"
         android:orderInCategory="100"
         android:title="@string/home_button"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/home"
         app:showAsAction="ifRoom" />
 </menu>
