--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/login_background">
 
 
     <TextView
@@ -14,6 +15,11 @@
 
 
     <ListView
+
+
+        android:divider="#000000"
+        android:dividerHeight="3dp"
+        android:listSelector="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listViewWhoPlays"/>
