--- a/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
@@ -140,7 +140,18 @@
             android:padding="5dp"
             android:layout_marginLeft="30sp"
             android:layout_marginRight="30sp"
-            android:text="ADD"/>
+            android:text="Add Me"/>
+
+        <ListView
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:layout_weight="1"
+            android:divider="#000000"
+            android:dividerHeight="3dp"
+            android:listSelector="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listViewFindPlayer"/>
 
 
 </TableLayout>
