--- a/TESI/WhoPlays/app/src/main/res/layout/listview_item_find_player.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/listview_item_find_player.xml
@@ -9,6 +9,9 @@ android:layout_height="match_parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/player_added"
+            android:textSize="20sp"
+            android:layout_marginBottom="3sp"
+            android:layout_marginTop="8sp"
             android:textColor="#FFF"/>
     </TableRow>
 <TableRow>
