--- a/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
@@ -11,7 +11,7 @@
             android:text="@string/item_type_who_plays"
             android:layout_weight="1"
             android:textSize="28sp"
-            android:textColor="#000"
+            android:textColor="#FFF"
             />
     </TableRow>
 
@@ -20,20 +20,20 @@
             android:id="@+id/itemPlaceWhoPlaysTextView"
             android:text="@string/item_place_who_plays"
             android:textSize="18sp"
-            android:textColor="#000"
+            android:textColor="#FFF"
             />
         <TextView
             android:id="@+id/itemDateWhoPlaysTextView"
             android:text="@string/item_date_who_plays"
             android:textSize="18sp"
-            android:textColor="#000"
+            android:textColor="#FFF"
             />
         <TextView
             android:id="@+id/itemCreatorWhoPlaysTextView"
             android:text="@string/item_creator_who_plays"
             android:textSize="18sp"
             android:textStyle="italic"
-            android:textColor="#000"
+            android:textColor="#0FFF"
             />
     </TableRow>
 </TableLayout>
